// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
.sx9tw1l {
  border-radius: var(--sx-radii-round);
  background: var(--sx-colors-tonal100);
  height: var(--sx-sizes-0);
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sx9tw1l4nwvh--theme-primary {
  color: var(--sx-colors-primary);
}

.sx59s28 {
  background-color: currentcolor;
  border-radius: var(--sx-radii-round);
  box-sizing: border-box;
  height: 100%;
  position: absolute;
  transition: all 300ms ease-out;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sx9tw1l sx9tw1l4nwvh--theme-primary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sx59s28"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
.sx9tw1l {
  border-radius: var(--sx-radii-round);
  background: var(--sx-colors-tonal100);
  height: var(--sx-sizes-0);
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sx9tw1l4nwvh--theme-primary {
  color: var(--sx-colors-primary);
}

.sx59s28 {
  background-color: currentcolor;
  border-radius: var(--sx-radii-round);
  box-sizing: border-box;
  height: 100%;
  position: absolute;
  transition: all 300ms ease-out;
}

<div>
  <div
    appearance="solid"
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sx9tw1l sx9tw1l4nwvh--theme-primary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sx59s28"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;
